booster/www/themes/jelix-newcolor/css/booster.css
/* ... */
#submenubar li a {
    color:white;
    text-decoration:none;
    text-shadow: #002830 1px 1px 1px;
}

#submenubar li {
    display:inline;
    padding:5px;
    font-size:1em;
    list-style-type:none;
    list-style-position:outside;
}
#submenubar li a:hover, #submenubar li a:focus{  text-decoration:underline; }
#submenubar li.selected a { border-bottom: 2px solid  #FFA08F }


#main h1 { font-size:1.7em; color: #c03033; margin:0; }
#main h1 a { color: #c03033; }
#main h3 a,#main h4 a, #main h5 a { color: #002830; }
#main h1 a.anchor { color: #c03033; text-decoration:none;}
#main h3 a.anchor,#main h4 a.anchor, #main h5 a.anchor { color: #002830; text-decoration:none; }
#main h2 { color: #802022;  margin:1em 0 0.5em 0; font-size:1.5em; cursor: pointer; }
#main h2 a.anchor { color: #802022; text-decoration:none; }
#main h2 a { color: #802022; }
#main h3 { color: #002830;  margin:1em 0 0.5em 0; font-size:1.3em;}
#main h4 { color: #002830; font-size:1.1em;}
#main h5 { color: #002830; font-size:1em;}


#main h3 {
    -moz-border-radius:15px 15px 0 0;
    background:-moz-linear-gradient(center top , #87B2C3, #5595AF, #3C90AF) no-repeat scroll left center #3C90AF;
    -o-border-radius:15px 15px 0 0;
    -webkit-border-top-right-radius: 15px;
    -webkit-border-top-left-radius: 15px;
    border-radius:15px 15px 0 0;
    background-color: #3C90AF;
    color:white;
    font-size:1em;
    margin:0;
    padding:3px 0px 5px 15px;
    vertical-align:bottom;
    z-index:50;
}

#main {
    background-color:white; margin-top:10px; padding:2em 1em 1em 1em;
    -moz-border-radius:8px;
    -o-border-radius:8px;
    border-radius:8px;
    -webkit-border-radius:8px;
    clear: both;
}

#main a { color:#3f6f7a; text-decoration:underline; }
#main a:visited {  color : #002830;}
#main a:hover, #main a:focus { color: #0f82af; background-color: #d7e7eb; }
#main input.button {
    background-color:#4397b6;
    border-left: 1px solid #99cbde;
    border-right: 1px solid  #225365;
    border-top: 1px solid #99cbde ;
    border-bottom: 1px solid  #225365;
    -moz-border-radius:3px;
    -o-border-radius:3px;
    -webkit-border-radius:3px;
    border-radius:3px;
    color:white;
    cursor: pointer;
}

#main input[type=button][disabled], input[type=submit][disabled], input[type=reset][disabled] {
    background: #94a8af;
    color: #ddd;
}



#main h1 a.anchor, #main h2 a.anchor, #main h3 a.anchor, #main h4 a.anchor, #main h5 a.anchor {
    visibility:hidden;
    font-size:0.7em;
}

#main h1:hover a.anchor, #main h2:hover a.anchor, #main h3:hover a.anchor,
#main h4:hover a.anchor, #main h5:hover a.anchor { visibility:visible; }

.clear {
    clear: both;
}
#content-menu {
    float: left;
    margin-left: 5px;
    margin-right: 5px;
    margin-top: 0;
    padding-right: 5px;
    width: 13%;
}

#content {
    border-left: 2px solid #D8E1E4;
    padding: 5px 5px 5px 15px;
    float: right;
    width: 83%;
}

#footer {
   clear:both;
   margin:1em 0 0 190px;
   padding:10px;
   color : #002830;
   text-align:center;
   font-size:0.8em;
}
#footer.full { margin-left:0}
#footer a { color:#3c90af; text-decoration:underline; }
#footer a:visited {  color : #002830;}
#footer a:hover, #footer a:focus { color: #0f82af; background-color: #d7e7eb; }

#booster_description {
    border: 1px solid #fff;
    background:-moz-linear-gradient(top, #edede6,#edede6, #edede6);
    background-color:#edede6;
    background-position:center left;
    background-repeat:no-repeat;
    -moz-border-radius:5px 0px 5px 0px;
    -moz-box-shadow: #999 3px 0px 0px 0px;
    box-shadow: #999 3px 3px 3px 3px;
    border-radius: 5px 0px 5px 0px;
    font-size: small;
    padding: 30px;
}

#booster_tagscloud h2{
    margin-top: 15px;
}

.booster_item {
    background-color: #f9f9f7;
    border:2px solid #edede6;
    margin: auto;
    padding-top:1.5em;
}


.booster_itemauthor {
    float:left;
    width: 20%;
    margin: 0 0 1.5em 1.5em;
    border: 1px solid #fff;
    background:-moz-linear-gradient(top, #edede6,#edede6, #edede6);
    background-color:#edede6;
    background-position:center left;
    background-repeat:no-repeat;
    -moz-border-radius:15px 15px 15px 15px;
    -o-border-radius:15px 15px 15px 15px;
    -webkit-border-top-right-radius: 15px;
    -webkit-border-top-left-radius: 15px;
    -webkit-border-bottom-right-radius: 15px;
    -webkit-border-bottom-left-radius: 15px;
    border-radius:15px 15px 15px 15px;
    -moz-box-shadow: #999 2px 2px 5px 0px;
    -webkit-box-shadow: #999  2px 2px 5px;
    -o-box-shadow: #999 2px 2px 5px 0px;
    box-shadow: #999 2px 2px 5px 0px;
}

.booster_itemauthor ul {
    margin: 10px 10px;
    padding: 0 0 0.5em 0;
    list-style: none;
}

.booster_itemauthor ul li {
    list-style: none;
}

.booster_itembody {
    width: 75%;
    margin-left: 2%;
    float: left;
}

.booster_itembody blockquote, .booster_itembody pre {
    margin-left:1.5em;
    padding-left:0.5em;
    border-left:2px solid #195a80;
}


.booster_itembody ul li {
    list-style-type: circle;
}

.booster_itembody ol li {
    list-style-type:  decimal;
}


.booster_itembody dl dt {
    font-weight: bold;
}

.booster_itembody dl dd {
    font-family: cursive;
    font-style: italic;
}

.booster_itembody  acronym {
    border-bottom-style: groove;
}

.booster_itembody code {
    font-family: monospace;
    background-color: #f5f5f5;
}

.booster_short_desc {
    float: left;
    width: 85%;
}

.booster_itemaction{
    text-align: right;
    background:-moz-linear-gradient(top, #edede6,#edede6, #edede6);
    background-color:#edede6;
    clear: both;
    border-bottom:5px solid #2b4c53;
}

.booster_itemtags {
    width: 15%;
    float: left;
    text-align: left;
}

.booster_itemtags li {
    list-style: none;
    padding-left:20px;
    list-style-type:none !important;
    list-style-position:outside;
    background-image: url("../images/posts/tag_green.png");
    background-color: transparent;
    background-repeat: no-repeat;
}
/* ... */

